Fix width overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,17 @@
 */
 
 * {
-  /* border: 1px solid Crimson; */
+  border: 1px solid Crimson;
 }
 
-html, body {
-  margin: 0;
-  height: 100%;
+html {
+  height: 100vh;
 }
 
 body {
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: #003049;
 }
 
